fixed error in manifest file

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="An E-commerce Store For IPL Teams Accessories."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon-16x16" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
